--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://ravisharmaa.github.io/iOS Developer-2.pdf" width="100%" height="850px"/>
+<embed src="https://ravisharmaa.github.io/@ravibastola.pdf" width="100%" height="850px"/>
