--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<embed src="https://ravisharmaa.github.io/@ravibastola.pdf" width="100%" height="850px"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CloudPDF Viewer</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0px;
+    }
+  </style>
+</head>
+<body style="height: 100%">
+  <div id="viewer" style="width: 800px; height: 500px; margin: 80px auto;"></div>
+  <script type="text/javascript" src="https://cloudpdf.io/viewer.min.js?version=0.1.0-beta.11"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function(){
+      const config = { 
+        documentId: 'd643f46a-0d98-4514-a525-7e4c7ab4fddd',
+        darkMode: true,
+      };
+      CloudPDF(config, document.getElementById('viewer')).then((instance) => {
+
+      });
+    });
+  </script>
+ </body>
+</html>
