--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body style="height: 100%">
-  <div id="viewer" style="width: 800px; height: 800px; margin: 20px auto;"></div>
+  <div id="viewer" style="height: 800px;"></div>
   <script type="text/javascript" src="https://cloudpdf.io/viewer.min.js?version=0.1.0-beta.11"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function(){
